correct span collapser colors

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
@@ -17,7 +17,7 @@ SPDX-License-Identifier: Apache-2.0
 
 .TimelineCollapser--btn,
 .TimelineCollapser--btn-expand {
-  color: var(--timeline-collapser-color);
+  color: var(--text-secondary);
   cursor: pointer;
   margin-right: 0.2rem;
   padding: 0.1rem;
@@ -25,7 +25,7 @@ SPDX-License-Identifier: Apache-2.0
 
 .TimelineCollapser--btn:hover,
 .TimelineCollapser--btn-expand:hover {
-  color: var(--timeline-collapser-hover);
+  color: var(--interactive-primary-hover);
 }
 
 .TimelineCollapser--btn-size {
